--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
               <p style="text-align:center">
                 <name>Reuben Tan</name>
               </p>
-              <p>I am fortunate to be advised by Professors <a href="http://ai.bu.edu/ksaenko.html">Kate Saenko</a> and <a href="https://bryanplummer.com/">Bryan Plummer</a>. I am also very grateful to be able to collaborate closely with Dr <a href="https://bryanrussell.org/">Bryan Russell</a> at Adobe Research. My primary research interests fall under the general umbrella of multimodal learning and video understanding.
+              <p>I am currently a researcher in the <a href="https://www.microsoft.com/en-us/research/group/deep-learning-group/">Deep Learning Group</a> at Microsoft Research, Redmond working under <a href="http://research.microsoft.com/en-us/um/people/jfgao/">Dr. Jianfeng Gao</a>.  During my PhD, I was very fortunate to be advised by Professors <a href="http://ai.bu.edu/ksaenko.html">Kate Saenko</a> and <a href="https://bryanplummer.com/">Bryan Plummer</a>. I am also very grateful to be able to collaborate closely with Dr <a href="https://bryanrussell.org/">Bryan Russell</a> at Adobe Research. My primary research interests fall under the general umbrella of multimodal learning and video understanding. If you are interested in collaborating or having any discussions on multimodel foundation models, please feel free to reach out!  
               </p>
               <!--<p style="color:#FF0000";><b> I am currently looking for full-time research positions starting from Summer 2024.</b> </p>-->
               <p style="text-align:center">
-                <a href="mailto:rxtan@bu.edu">Email</a> &nbsp/&nbsp
+                <a href="mailto:tanreuben@microsoft.com">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/rxtan2/">Github</a> &nbsp/&nbsp
                 <a href="">CV</a>
               </p>
