--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Reuben Tan</name>
               </p>
-              <p>I am currently a researcher in the <a href="https://www.microsoft.com/en-us/research/group/deep-learning-group/">Deep Learning Group</a> at Microsoft Research, Redmond working under <a href="http://research.microsoft.com/en-us/um/people/jfgao/">Dr. Jianfeng Gao</a>.  During my PhD, I was very fortunate to be advised by Professors <a href="http://ai.bu.edu/ksaenko.html">Kate Saenko</a> and <a href="https://bryanplummer.com/">Bryan Plummer</a>. I am also very grateful to be able to collaborate closely with Dr <a href="https://bryanrussell.org/">Bryan Russell</a> at Adobe Research. My primary research interests fall under the general umbrella of multimodal learning and video understanding. If you are interested in collaborating or having any discussions on multimodel foundation models, please feel free to reach out!  
+              <p>I am currently a researcher in the <a href="https://www.microsoft.com/en-us/research/group/deep-learning-group/">Deep Learning Group</a> at Microsoft Research, Redmond working under <a href="http://research.microsoft.com/en-us/um/people/jfgao/">Dr. Jianfeng Gao</a>.  During my PhD, I was very fortunate to be advised by Professors <a href="http://ai.bu.edu/ksaenko.html">Kate Saenko</a> and <a href="https://bryanplummer.com/">Bryan Plummer</a>. I am also very grateful to be able to collaborate closely with Dr <a href="https://bryanrussell.org/">Bryan Russell</a> at Adobe Research. My primary research interests fall under the general umbrella of multimodal learning and video understanding. If you are interested in collaborating or having any discussions on multimodal foundation models, please feel free to reach out!  
               </p>
               <!--<p style="color:#FF0000";><b> I am currently looking for full-time research positions starting from Summer 2024.</b> </p>-->
               <p style="text-align:center">
@@ -51,6 +51,62 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+<tr>
+  <td style="padding:20px;width:25%;vertical-align:middle">
+    <img src="images/magma-teaser.png" alt="magma" width="300" height="300">
+  </td>
+  <td width="75%" valign="middle">
+    <papertitle>Magma: A Foundation Model for Multimodal AI Agents</papertitle>
+    <br>
+    <strong>Magma Team</strong>,
+    <br>
+    <em>CVPR</em>, 2025
+    <br>
+    <a href="https://microsoft.github.io/Magma/">Project page</a>
+    /
+    <a href="https://github.com/microsoft/Magma">Code</a>
+    /
+    <a href="https://www.arxiv.org/pdf/2502.13130">arXiv</a>
+    <p>Magma is the first foundation model for multimodal AI agents. As the bedrock for mutimodal agentic models, it possesse strong capabilities to perceive the multimodal groundingly world AND take goal-driven actions precisely. By effectively transferring knowledge from freely available visual and language data, Magma bridges verbal, spatial and temporal intelligence to navigate complex tasks and settings across digital and physical world.</p>
+  </td>
+</tr>
+
+<tr>
+  <td style="padding:20px;width:25%;vertical-align:middle">
+    <img src="images/lapa-teaser.png" alt="avset" width="300" height="300">
+  </td>
+  <td width="75%" valign="middle">
+    <papertitle>LAPA: Latent Action Pretraining from Videos</papertitle>
+    <br>
+    <a href="https://seonghyeonye.github.io/">Seonghyeon Ye</a>,
+    <a href="https://joeljang.github.io/">Joel Jang</a>,
+    <a href="https://scholar.google.com/citations?user=_Kw32VoAAAAJ&hl=ko">Byeongguk Jeon</a>,
+    <a href="https://scholar.google.co.kr/citations?user=xii168wAAAAJ&hl">Sejune Joo</a>,
+    <a href="https://jwyang.github.io/">Jianwei Yang</a>,
+    <a href="https://scholar.google.com/citations?user=u1CNjgwAAAAJ&hl">Baolin Peng</a>,
+    <a href="https://ai.stanford.edu/~amandlek/">Ajay Mandlekar</a>,
+    <strong>Reuben Tan</strong>,
+    <a href="https://research.nvidia.com/person/yu-wei-chao">Yu-Wei Chao</a>,
+    
+    <a href="https://yuchenlin.xyz/">Yuchen Lin</a>,
+    <a href="https://scholar.google.com/citations?user=r4KX3UgAAAAJ&hl">Lars Liden</a>,
+    <a href="https://sites.google.com/view/kiminlee">Kimin Lee</a>,
+    <a href="https://www.microsoft.com/en-us/research/people/jfgao/?from=https://research.microsoft.com/en-us/um/people/jfgao/&type=exact">Jianfeng Gao</a>,
+    <a href="https://www.cs.washington.edu/people/faculty/lsz">Luke Zettlemoyer</a>,
+    <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>
+    <a href="https://seominjoon.github.io/">Minjoon Seo</a>
+    <br>
+    <em>ICLR</em>, 2025
+    <br>
+    <a href="https://latentactionpretraining.github.io/">Project page</a>
+    /
+    <a href="https://github.com/LatentActionPretraining/LAPA">Code</a>
+    /
+    <a href="https://arxiv.org/abs/2410.11758">arXiv</a>
+    <p>We introduce Latent Action Pretraining for general Action models (LAPA), the first unsupervised method for pretraining Vision-Language-Action (VLA) models without ground-truth robot action labels. Existing Vision-Language-Action models require action labels typically collected by human teleoperators during pretraining, which significantly limits possible data sources and scale. In this work, we propose a method to learn from internet-scale videos that do not have robot action labels.</p>
+  </td>
+</tr>
         
 <tr>
   <td style="padding:20px;width:25%;vertical-align:middle">
