--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <tr>
   <td style="padding:20px;width:25%;vertical-align:middle">
-    <img src="images/lapa-teaser.png" alt="avset" width="300" height="300">
+    <img src="images/lapa-teaser.png" alt="avset"  style="width: 300px; height: auto;">
   </td>
   <td width="75%" valign="middle">
     <papertitle>LAPA: Latent Action Pretraining from Videos</papertitle>
