--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
 <tr>
   <td style="padding:20px;width:25%;vertical-align:middle">
-    <img src="images/magma-teaser.png" alt="magma" width="300" height="300">
+    <img src="images/magma-teaser.png" alt="magma" style="width: 300px; height: auto;">
   </td>
   <td width="75%" valign="middle">
     <papertitle>Magma: A Foundation Model for Multimodal AI Agents</papertitle>
     <br>
-    <strong>Magma Team</strong>,
+    <strong>Magma Team</strong>
     <br>
     <em>CVPR</em>, 2025
     <br>
