--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <p style="text-align:center">
                 <a href="mailto:tanreuben@microsoft.com">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/rxtan2/">Github</a> &nbsp/&nbsp
+				<a href="https://scholar.google.com/citations?user=rPRWQHgAAAAJ&hl=en&authuser=1&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="">CV</a>
               </p>
             </td>
