--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <br>
     <em>CVPR</em>, 2024
     <br>
-    <a href="https://cs-people.bu.edu/rxtan/projects/Koala/">Project page</a>
+    <a href="https://rxtan2.github.io/projects/Koala/">Project page</a>
     /
     <a href="https://github.com/rxtan2/Koala-video-llm">Code</a>
     /
@@ -242,7 +242,7 @@
     <br>
     <em>CVPR</em>, 2023
     <br>
-    <a href="https://cs-people.bu.edu/rxtan/projects/VAST">Project page</a>
+    <a href="https://rxtan2.github.io/projects/VAST">Project page</a>
     /
     <a href="https://github.com/rxtan2/AVSeT">Code</a>
     /
